<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_result"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_quiz">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="0dp">

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/result"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_trophy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/quiz"
            android:src="@drawable/ic_trophy" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            tools:text="Your Score is ? out of 10" />

        <Button
            android:id="@+id/bt_tryagain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/default_option_border_bg"
            android:text="@string/try_again"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#040F15" />

        <Button
            android:id="@+id/btn_double"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:text="@string/doublecoins"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:backgroundTint="#FFD400" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/default_option_border_bg"
            android:text="@string/back"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="#2979FF" />

    </LinearLayout>

</ScrollView>